fix overflow bug on section

--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -14,7 +14,7 @@ main::-webkit-scrollbar {
 .section {
     position: relative;
     scroll-snap-align: start;
-    overflow-x: hidden;
+    overflow: hidden;
     width: 100%;
     height: 100vh;
     display: flex;
